--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -304,7 +304,7 @@ Two major areas of possible problems:
 - *CONFIG_BPF_JIT_ALWAYS_ON=y* to secure against malicious VMs.
 - */Unprivileged/* users may load BPF programs. Is that a problem?
 
-** Slide: Unprivileged BPF                                          :export:
+** Slide: Unprivileged BPF (1/2)                                    :export:
 
 /Considerations/
 - Verifier bugs may be dangerous.
@@ -316,7 +316,7 @@ Two major areas of possible problems:
 - No way to set this */by default/* in upstream kernel.
 - Needs to be set in a bootloader. Or use a distro specific patch.
 
-** Slide: Unprivileged BPF                                          :export:
+** Slide: Unprivileged BPF (2/2)                                    :export:
 
 *Problems*
 - Daemons manipulating maps need to be */privileged/*.
@@ -324,6 +324,19 @@ Two major areas of possible problems:
 - Want to limit access to maps owned by other services.
 
 /Possible solution:/ access rights for maps?
+- Proposed by Andy Lutomirski
+
+*** Notes to Slide: Unprivileged BPF                             :noexport:
+
+We are very interested in Andy Lutomirski upstream proposal and appreciate his
+effort. See his proposal: https://t.co/WIhsdN2PoJ
+
+We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
+interesting.
+
+Alexei now also have a [[ https://lore.kernel.org/netdev/20190827205213.456318-1-ast@kernel.org/T/#u][code proposal]]
+- Introducing CAP_BPF and combining with CAP_NET_ADMIN
+- Discussions on also adding CAP_TRACING
 
 * Slide: XDP pain points                                             :export:
 :PROPERTIES:
@@ -730,49 +743,6 @@ Driver needs to express feature bits internally.
 Two options:
 - (1) Expose driver feature bits (ethtool? kind of UAPI)
 - (2) Do feature probing like bpftool
-
-
-* Topic: BPF security, safety and audit logging                    :noexport:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-** Slide: Current BPF "privileged" level unusable
-
-Current BPF only one "privileged" level, root (=CAP_SYS_ADMIN=)
-
-RHEL: limit BPF to root only system-wide
-- Our only option: Fully unpriv user = too high risk
-- Actually /not what we really want/ - bad for overall system safety
-- E.g. daemons *unnecessary run as root after loading BPF-prog*
-  - expose (daemon) can crash/compromise entire system
-  - common UNIX practise to drop priv, cannot as still need to read maps
-
-Need more flexible BPF "capabilities" levels
-- [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][Use-case]]: Android [[https://source.android.com/devices/tech/datausage/ebpf-traffic-monitor][ebpf-traffic-monitor]] reads MAP stats (in unpriv process)
-  - Currently forced to keep unprivileged BPF enabled
-- Levels still motivate security guys to find holes
-
-*** Notes to Slide: Current BPF "privileged" level unusable      :noexport:
-
-We are very interested in Andy Lutomirski upstream proposal and appreciate his
-effort. See his proposal: https://t.co/WIhsdN2PoJ
-
-We also find Daniel Borkmanns [[https://lore.kernel.org/bpf/98fee747-795a-ff10-fa98-10ddb5afcc03@iogearbox.net/][idea for several CAP_BPF type sub-policies]]
-interesting.
-
-Alexei now also have a [[ https://lore.kernel.org/netdev/20190827205213.456318-1-ast@kernel.org/T/#u][code proposal]]
-- Introducing CAP_BPF and combining with CAP_NET_ADMIN
-- Discussions on also adding CAP_TRACING
-
-** Slide: BPF audit logging
-
-*/INCOMPLETE SLIDE - PLEASE FIX/*
-
-Simply logging BPF prog + attach, seemed natural
-- Want simple audit trail of BPF prog load/unload + attach
-- This was blocked upstream...
-- TODO: Explain why?!
 
 
 * Tooling and build environments                                     :export:
